--- a/index.html
+++ b/index.html
@@ -3,13 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfolio-shohidullah</title>
-    <link rel="stylesheet" href="/style.css">
+    <title>shohidullah portfolio website</title>
+    <!-- meta tag for seo -->
+    <meta name="title" content="shohidullah portfolio">
+    <meta name="description" content="......">
+    <meta name="keywords" content="shohidullah portfolio webdeveloper shohidullah">
+    <!-- favicon -->
+   <link rel="shortcut icon" href="/imges/profile.jpeg" type="image/x-icon">
+   <!-- google font -->
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+   <!-- css -->
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     
-    <p>my portfolio website</p>
+   <!-- Navbar -->
+    <nav class="navbar">
+        <div class="nav-continer">
 
-    <script src="/app.js"></script>
+         <div class="nav-left">
+            <div class="">
+              <a href="/"><img src="/imges/profile.jpeg" width="60" alt="logo" class="logo"></a>
+            </div>
+            <div class="nav-name">
+              <h1>GE shohidullah</h1>
+            </div>
+         </div>
+
+          <div class="nav-right">
+            <ul class="nav-items-continer">
+                <li class="nav-item"><a href="#" class="nav-item-links">About</a></li>
+                <li class="nav-item"><a href="#" class="nav-item-links">Resume</a></li>
+                <li class="nav-item"><a href="#" class="nav-item-links">Certification</a></li>
+                <li class="nav-item"><a href="#" class="nav-item-links">Skills</a></li>
+                <li class="nav-item"><a href="#" class="nav-item-links">Portfolio</a></li>
+                <li class="nav-item"><a href="#" class="nav-item-links">Contact </a></li>
+            </ul>  
+          </div>
+        </div>
+    </nav>
+    <hr>
+    <script src="/js/app.js"></script>
 </body>
 </html>
