--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <a href="/"><img src="/imges/profile.jpeg" width="60" alt="logo" class="logo"></a>
             </div>
             <div class="nav-name">
-              <h1>GE shohidullah</h1>
+              <h1>GE SHOHIDULLAH</h1>
             </div>
          </div>
 
@@ -44,6 +44,20 @@
           </div>
         </div>
     </nav>
+    <!-- hero-section -->
+     <div id="about" class="container">
+      <div class="hero-container">
+        <div class="hero-left">
+           <img src="/imges/profile.jpeg" alt="" class="hero-img" width="300">
+        </div>
+
+        <div class="hero-right">
+           <h2 class="title">GE Shohidullah</h2>
+           <p class="description">GE shohidullah is a young full-stack web developer with vast experience in developing secure and scalable software solutions for over three years. He did his Bachelor's in Computer Science & Engineering . Throughout his career, he has worked across various domains in healthcare, ed-tech, telecommunication, e-commerce, and business services to secure systems and sensitive data. shohidullah brings enough valuable experience in IT audit and cybersecurity regarding the necessity for finding vulnerabilities, using protection measures, and keeping standards for computer security. He loves teaching and is committed to sharing his expanding expertise to enable his students to thrive in the IT sector.</p>
+        </div>
+
+      </div>
+     </div>
     
     <script src="/js/app.js"></script>
 </body>
