--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
           <div class="nav-right">
             <ul class="nav-items-continer">
-                <li class="nav-item"><a href="#" class="nav-item-links">About</a></li>
-                <li class="nav-item"><a href="#" class="nav-item-links">Resume</a></li>
-                <li class="nav-item"><a href="#" class="nav-item-links">Certification</a></li>
+                <li class="nav-item"><a href="#about" class="nav-item-links">About</a></li>
+                <li class="nav-item"><a href="#resume" class="nav-item-links">Resume</a></li>
+            <li class="nav-item"><a href="#certification" class="nav-item-links">Certification</a></li>
                 <li class="nav-item"><a href="#" class="nav-item-links">Skills</a></li>
                 <li class="nav-item"><a href="#" class="nav-item-links">Portfolio</a></li>
                 <li class="nav-item"><a href="#" class="nav-item-links">Contact </a></li>
@@ -58,6 +58,87 @@
 
       </div>
      </div>
+     <!-- resume-section -->
+    <div id="resume" class="container">
+      <div class="resume-container">
+        <h2 class="title">Resume</h2>
+        <div class="resume-sub-container">
+          <div class="resume-left">
+            <img src="/imges/experience.png" alt="img" class="resume-img" width="400">
+          </div>
+
+          <div class="resume-right">
+            <div class="subtitle">Experience</div>
+            <div class="line">
+              <div class="inner-line"></div>
+              </div>
+              <div class="resume-list">
+
+                <div class="resume-duration-container">
+                  <div class="round-div"></div>
+                  <div class="resume-duration">jan 2023 - jul 2024</div>
+                </div>
+
+                <div class="resume-description">
+                  <h2 class="resume-company">RecursiveEducation</h2>
+                  <h3 class="resume-designation">Software Engineer</h3>
+                </div>
+              </div>
+              <div class="resume-list">
+
+                <div class="resume-duration-container">
+                  <div class="round-div"></div>
+                  <div class="resume-duration">jan 2023 - jul 2024</div>
+                </div>
+
+                <div class="resume-description">
+                  <h2 class="resume-company">RecursiveEducation</h2>
+                  <h3 class="resume-designation">Software Engineer</h3>
+                </div>
+              </div>
+              <div class="resume-list">
+
+                <div class="resume-duration-container">
+                  <div class="round-div"></div>
+                  <div class="resume-duration">jan 2023 - jul 2024</div>
+                </div>
+
+                <div class="resume-description">
+                  <h2 class="resume-company">RecursiveEducation</h2>
+                  <h3 class="resume-designation">Software Engineer</h3>
+                </div>
+              </div>
+              <div class="resume-list">
+
+                <div class="resume-duration-container">
+                  <div class="round-div"></div>
+                  <div class="resume-duration">jan 2023 - jul 2024</div>
+                </div>
+
+                <div class="resume-description">
+                  <h2 class="resume-company">RecursiveEducation</h2>
+                  <h3 class="resume-designation">Software Engineer</h3>
+                </div>
+              </div>
+              <div class="resume-list">
+
+                <div class="resume-duration-container">
+                  <div class="round-div"></div>
+                  <div class="resume-duration">jan 2023 - jul 2024</div>
+                </div>
+
+                <div class="resume-description">
+                  <h2 class="resume-company">RecursiveEducation</h2>
+                  <h3 class="resume-designation">Software Engineer</h3>
+                </div>
+              </div>
+            </div>
+        </div>
+        </div>
+      </div>
+    </div>
+    <!-- certification -->
+     
     
     <script src="/js/app.js"></script>
 </body>
