--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <div class="resume-container">
         <h2 class="title">Resume</h2>
         <div class="resume-sub-container">
+
           <div class="resume-left">
             <img src="/imges/experience.png" alt="img" class="resume-img" width="400">
           </div>
@@ -72,6 +73,7 @@
             <div class="line">
               <div class="inner-line"></div>
               </div>
+
               <div class="resume-list">
 
                 <div class="resume-duration-container">
@@ -130,10 +132,63 @@
                 <div class="resume-description">
                   <h2 class="resume-company">RecursiveEducation</h2>
                   <h3 class="resume-designation">Software Engineer</h3>
+              </div>
+               </div>
+            </div>
+
+            <div class="resume-left">
+              <div class="subtitle">Education</div>
+              <div class="line">
+                <div class="inner-line"></div>
                 </div>
+  
+                <div class="resume-list">
+  
+                  <div class="resume-duration-container">
+                    <div class="round-div"></div>
+                    <div class="resume-duration">jan 2022 - present</div>
+                  </div>
+  
+                  <div class="resume-description">
+                    <h2 class="resume-company">NeU</h2>
+                    <h3 class="resume-designation">CSE</h3>
+                  </div>
+                </div>
+                <div class="resume-list">
+  
+                  <div class="resume-duration-container">
+                    <div class="round-div"></div>
+                    <div class="resume-duration">jul 2017 - jun 2019</div>
+                  </div>
+  
+                  <div class="resume-description">
+                    <h2 class="resume-company">NGC</h2>
+                    <h3 class="resume-designation">HSC</h3>
+                  </div>
+                </div>
+                <div class="resume-list">
+  
+                  <div class="resume-duration-container">
+                    <div class="round-div"></div>
+                    <div class="resume-duration">jan 2011 - mar 2017</div>
+                  </div>
+  
+                  <div class="resume-description">
+                    <h2 class="resume-company">HFUAHS</h2>
+                    <h3 class="resume-designation">SSC</h3>
+                  </div>
+                </div>
+               
+            </div>
+            <div class="resume-right">
+              <div class="resume-left">
+                <img src="/imges/education.png" alt="img" class="resume-img" width="400">
               </div>
             </div>
-        </div>
+
+
+
+
         </div>
       </div>
     </div>
