veiw all certificate button addded

--- a/index.html
+++ b/index.html
@@ -270,6 +270,11 @@
 
                 </div>
               </div>
+              <div class="certificate-link-container">
+                <a href="" class="certificate-link">
+                  <button class="certificate-btn">View All Certifications</button>
+                </a>
+              </div>
               
             </div>
           </div>
