--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                </div>
           </div>
           <div class="project-list">
-            <img src="/imges/Inside Ev.png" alt="" class="project-img">
+            <img src="/imges/corporate.png" alt="" class="project-img">
             <div class="project-details">
                    <h2 class="project-name">Moon</h2>
                    <p class="project-description">
@@ -429,7 +429,7 @@
             </div>
        </div>
        <div class="project-list">
-        <img src="/imges/Inside Ev.png" alt="" class="project-img">
+        <img src="/imges/Family Food Mart.png" alt="" class="project-img">
         <div class="project-details">
                <h2 class="project-name">Moon</h2>
                <p class="project-description">
@@ -443,7 +443,7 @@
 
 
    <div class="project-list">
-    <img src="/imges/Inside Ev.png" alt="" class="project-img">
+    <img src="/imges/fotonoptix.png" alt="" class="project-img">
     <div class="project-details">
            <h2 class="project-name">Moon</h2>
            <p class="project-description">
