--- a/index.html
+++ b/index.html
@@ -538,6 +538,44 @@
 
  </div>
            <!-- contact-section -->
+            <div id="contact" class="container">
+              <div class="contact-container">
+                <div class="subtitle-container">
+                  <h3 class="subtitle">Contact</h3>
+                  <div class="line">
+                    <div class="inner-line"></div>
+                  </div>
+                </div>
+                <div class="contact-info-container">
+                  <div>
+                    <a href="tel:">01976630471</a>
+                    <p>Bangladesh</p>
+                    <a href="mailto:shohidullah">geshohidullah@gmail.com</a>
+                  </div>
+                  <div>
+                    <h2 class="subtitle">How Can I Help You</h2>
+                    <div class="line">
+                      <div class="inner-line">
+                      </div>
+                    </div>
+                    <form action="">
+                     <div>
+                      <input class="input-field" placeholder="Full Name" type="text" 
+                      name="name" id="name" required>
+                      <input class="input-field" placeholder="E-mail" type="email" 
+                      name="email" id="email" required>
+                      <input type="text" name="subject" id="subject" placeholder="Subject" class="input-field">
+                     </div>
+                     <div>
+                      <textarea name="messege" id="messege" cols="30" rows="8" placeholder="Messege" class="input-field"></textarea>
+                     </div>
+                    </form>
+                    <button class="contact-btn">send messege</button>
+                  </div>
+                </div>
+              </div>
+
+            </div>
      
     <script src="/js/app.js"></script>
 </body>
